applications/example-app-istio/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bookinfo-app
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.frontend.rule.type: PathPrefixStrip
    #traefik.ingress.kubernetes.io/redirect-entry-point: https
    #traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  rules:
    - host: bookinfo-app.kubernetes.local
      http:
        paths:
          - path: /
            backend:
              serviceName: productpage
              servicePort: 9080
